# dirsort-docker

./: .gitignore  Dockerfile  Dockerfile.test  Dockerfile2  README.md  build.sh  dirsort.c  myinstall.sh
complete-apue/: Make.defines  README.md
complete-apue/lib.44/: Makefile  strerror.c
complete-apue/lib.44/RCS/: strerror.c,v
complete-apue/lib.svr4/: Makefile  semaph.c  strerror.c  systype.sh
dirsort/: .gitignore  .make.state  .nse_depinfo  CMakeCache.txt  CMakeLists.txt  Imakefile  Makefile  cmake_install.cmake  contents.dvi  dirsort  dirsort.c.orig  dirsort.pool  dirsort.scn  dirsort.toc  dirsort.web  tmp.dvi  web_info.tex
dirsort/config/: site.p-def
